Remodeled Product,  Added database connection.  Created SQLQuery with generic Include. Product details added to db and started displaying

--- a/WebShop.Core/WebShop.Core.csproj
+++ b/WebShop.Core/WebShop.Core.csproj
@@ -43,8 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Contracts\IRepository.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Category.cs" />
+    <Compile Include="Models\Image.cs" />
     <Compile Include="Models\SubCategory.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\UserReview.cs" />
