--- a/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
+++ b/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
@@ -50,12 +50,17 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Datacontext.cs" />
-    <Compile Include="Migrations\202101182043335_Initial.cs" />
-    <Compile Include="Migrations\202101182043335_Initial.Designer.cs">
-      <DependentUpon>202101182043335_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\202101191317241_Initial.cs" />
+    <Compile Include="Migrations\202101191317241_Initial.Designer.cs">
+      <DependentUpon>202101191317241_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101191627071_Initial1.cs" />
+    <Compile Include="Migrations\202101191627071_Initial1.Designer.cs">
+      <DependentUpon>202101191627071_Initial1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WebShop.Core\WebShop.Core.csproj">
@@ -68,8 +73,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202101182043335_Initial.resx">
-      <DependentUpon>202101182043335_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202101191317241_Initial.resx">
+      <DependentUpon>202101191317241_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101191627071_Initial1.resx">
+      <DependentUpon>202101191627071_Initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
