--- a/WebShop.Core/WebShop.Core.csproj
+++ b/WebShop.Core/WebShop.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Image.cs" />
+    <Compile Include="Models\Manufacture.cs" />
     <Compile Include="Models\SubCategory.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\User.cs" />
