--- a/WebShop.DataAccess.SQL/App.config
+++ b/WebShop.DataAccess.SQL/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=DESKTOP-8MGS3C1;Initial Catalog=WebShop;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=WebShop;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <entityFramework>
 	  <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
