--- a/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
+++ b/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
@@ -52,9 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datacontext.cs" />
-    <Compile Include="Migrations\202101191915385_Initial.cs" />
-    <Compile Include="Migrations\202101191915385_Initial.Designer.cs">
-      <DependentUpon>202101191915385_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\202101201012218_Initial.cs" />
+    <Compile Include="Migrations\202101201012218_Initial.designer.cs">
+      <DependentUpon>202101201012218_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,8 +71,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202101191915385_Initial.resx">
-      <DependentUpon>202101191915385_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202101201012218_Initial.resx">
+      <DependentUpon>202101201012218_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
