--- a/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
+++ b/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Migrations\202101201012218_Initial.designer.cs">
       <DependentUpon>202101201012218_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101201022019_Initial1.cs" />
+    <Compile Include="Migrations\202101201022019_Initial1.designer.cs">
+      <DependentUpon>202101201022019_Initial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -73,6 +77,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202101201012218_Initial.resx">
       <DependentUpon>202101201012218_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101201022019_Initial1.resx">
+      <DependentUpon>202101201022019_Initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
