--- a/WebShop.WebUI/WebShop.WebUI.csproj
+++ b/WebShop.WebUI/WebShop.WebUI.csproj
@@ -233,12 +233,16 @@
     <Content Include="Content\brands\mossimo.png" />
     <Content Include="Content\images\banner\banner-1.jpg" />
     <Content Include="Content\images\banner\banner-2.jpg" />
-    <Content Include="Content\productImages\1\1.jpg" />
-    <Content Include="Content\productImages\1\2.jpg" />
-    <Content Include="Content\productImages\1\3.jpg" />
-    <Content Include="Content\productImages\1\4.jpg" />
-    <Content Include="Content\productImages\1\5.jpg" />
+    <Content Include="Content\productImages\ladies\1.jpg" />
+    <Content Include="Content\productImages\ladies\2.jpg" />
+    <Content Include="Content\productImages\ladies\3.jpg" />
+    <Content Include="Content\productImages\ladies\4.jpg" />
+    <Content Include="Content\productImages\ladies\5.jpg" />
     <Content Include="Content\images\banner\pageBanner.png" />
+    <Content Include="Content\productImages\ladies\6.jpg" />
+    <Content Include="Content\productImages\ladies\7.jpg" />
+    <Content Include="Content\productImages\ladies\8.jpg" />
+    <Content Include="Content\productImages\ladies\9.jpg" />
     <Content Include="Content\themes\css\bootstrappage.css" />
     <Content Include="Content\themes\css\flexslider.css" />
     <Content Include="Content\themes\css\jquery.fancybox.css" />
