--- a/WebShop.Core/WebShop.Core.csproj
+++ b/WebShop.Core/WebShop.Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserReview.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\HomeProductListViewModel.cs" />
     <Compile Include="ViewModels\ProductDetailsViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
