added user review and rating design

--- a/WebShop.Core/WebShop.Core.csproj
+++ b/WebShop.Core/WebShop.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Image.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductCart.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserReview.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
