--- a/WebShop.WebUI/WebShop.WebUI.csproj
+++ b/WebShop.WebUI/WebShop.WebUI.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ProductCartController.cs" />
     <Compile Include="Controllers\ProductDetailsController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -247,6 +248,12 @@
     <Content Include="Content\themes\css\flexslider.css" />
     <Content Include="Content\themes\css\jquery.fancybox.css" />
     <Content Include="Content\themes\css\main.css" />
+    <Content Include="Content\themes\css\review.css" />
+    <Content Include="Content\themes\fontawesome-5\css\all.css" />
+    <Content Include="Content\themes\fontawesome-5\css\all.min.css" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-brands-400.svg" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-regular-400.svg" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-solid-900.svg" />
     <Content Include="Content\themes\images\arrow-p.png" />
     <Content Include="Content\themes\images\arrow-pleft.png" />
     <Content Include="Content\themes\images\bg.png" />
@@ -262,6 +269,7 @@
     <Content Include="Content\themes\js\jquery.fancybox.js" />
     <Content Include="Content\themes\js\jquery.flexslider-min.js" />
     <Content Include="Content\themes\js\jquery.scrolltotop.js" />
+    <Content Include="Content\themes\js\review.js" />
     <Content Include="Content\themes\js\superfish.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -289,6 +297,18 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-brands-400.eot" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-brands-400.ttf" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-brands-400.woff" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-brands-400.woff2" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-regular-400.eot" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-regular-400.ttf" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-regular-400.woff" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-regular-400.woff2" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-solid-900.eot" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-solid-900.ttf" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-solid-900.woff" />
+    <Content Include="Content\themes\fontawesome-5\webfonts\fa-solid-900.woff2" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -418,11 +438,10 @@
     <Content Include="Views\Home\Register.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\ProductDetails\Index.cshtml" />
+    <Content Include="Views\ProductCart\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\themes\js\images\" />
-    <Folder Include="Content\themes\js\js\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
