--- a/WebShop.WebUI/WebShop.WebUI.csproj
+++ b/WebShop.WebUI/WebShop.WebUI.csproj
@@ -184,12 +184,17 @@
     <Compile Include="Migrations\202101191354266_Initial.designer.cs">
       <DependentUpon>202101191354266_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101211304162_AddFieldsToMembershipTable.cs" />
+    <Compile Include="Migrations\202101211304162_AddFieldsToMembershipTable.designer.cs">
+      <DependentUpon>202101211304162_AddFieldsToMembershipTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -424,6 +429,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202101191354266_Initial.resx">
       <DependentUpon>202101191354266_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101211304162_AddFieldsToMembershipTable.resx">
+      <DependentUpon>202101211304162_AddFieldsToMembershipTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
