--- a/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
+++ b/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
@@ -60,6 +60,10 @@
     <Compile Include="Migrations\202101201022019_Initial1.designer.cs">
       <DependentUpon>202101201022019_Initial1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101211822452_Initial3.cs" />
+    <Compile Include="Migrations\202101211822452_Initial3.designer.cs">
+      <DependentUpon>202101211822452_Initial3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -80,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101201022019_Initial1.resx">
       <DependentUpon>202101201022019_Initial1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101211822452_Initial3.resx">
+      <DependentUpon>202101211822452_Initial3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
