--- a/WebShop.DataAccess.SQL/App.config
+++ b/WebShop.DataAccess.SQL/App.config
@@ -12,7 +12,7 @@
 	</configSections>
 	
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=DESKTOP-78JPDNO;Initial Catalog=LexShop;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=WebShop;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	
 	<entityFramework>
