--- a/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
+++ b/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
@@ -80,6 +80,18 @@
     <Compile Include="Migrations\202101242136303_Shipping.designer.cs">
       <DependentUpon>202101242136303_Shipping.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101251833203_Order.cs" />
+    <Compile Include="Migrations\202101251833203_Order.designer.cs">
+      <DependentUpon>202101251833203_Order.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101251950515_Order1.cs" />
+    <Compile Include="Migrations\202101251950515_Order1.designer.cs">
+      <DependentUpon>202101251950515_Order1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101252045506_Order2.cs" />
+    <Compile Include="Migrations\202101252045506_Order2.designer.cs">
+      <DependentUpon>202101252045506_Order2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -115,6 +127,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101242136303_Shipping.resx">
       <DependentUpon>202101242136303_Shipping.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101251833203_Order.resx">
+      <DependentUpon>202101251833203_Order.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101251950515_Order1.resx">
+      <DependentUpon>202101251950515_Order1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101252045506_Order2.resx">
+      <DependentUpon>202101252045506_Order2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
