--- a/WebShop.WebUI/Web.config
+++ b/WebShop.WebUI/Web.config
@@ -10,7 +10,7 @@
   </configSections>
 
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=WebShop;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=WebShop1;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
   <appSettings>
