--- a/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
+++ b/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
@@ -84,6 +84,14 @@
     <Compile Include="Migrations\202101261427209_AddDiscount.designer.cs">
       <DependentUpon>202101261427209_AddDiscount.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101281233277_FilePathAdded.cs" />
+    <Compile Include="Migrations\202101281233277_FilePathAdded.designer.cs">
+      <DependentUpon>202101281233277_FilePathAdded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101281305473_FilePathAdded1.cs" />
+    <Compile Include="Migrations\202101281305473_FilePathAdded1.designer.cs">
+      <DependentUpon>202101281305473_FilePathAdded1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -122,6 +130,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101261427209_AddDiscount.resx">
       <DependentUpon>202101261427209_AddDiscount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101281233277_FilePathAdded.resx">
+      <DependentUpon>202101281233277_FilePathAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101281305473_FilePathAdded1.resx">
+      <DependentUpon>202101281305473_FilePathAdded1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
