--- a/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
+++ b/WebShop.DataAccess.SQL/WebShop.DataAccess.SQL.csproj
@@ -92,6 +92,10 @@
     <Compile Include="Migrations\202101281305473_FilePathAdded1.designer.cs">
       <DependentUpon>202101281305473_FilePathAdded1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101281451383_FilePathAdded2.cs" />
+    <Compile Include="Migrations\202101281451383_FilePathAdded2.designer.cs">
+      <DependentUpon>202101281451383_FilePathAdded2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -136,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101281305473_FilePathAdded1.resx">
       <DependentUpon>202101281305473_FilePathAdded1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101281451383_FilePathAdded2.resx">
+      <DependentUpon>202101281451383_FilePathAdded2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
